force-app/main/default/objects/Customer_Information__c/Customer_Information__c.object-meta.xml
<CustomObject>
    <label>Customer Information</label>
    <nameField>
        <displayFormat>CI-{000}</displayFormat>
        <label>Customer ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Informations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>