force-app/main/default/objects/Customer_Information__c/fields/Device__c.field-meta.xml
<CustomField>
    <fullName>Device__c</fullName>
    <label>Device</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Laptop</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>