force-app/main/default/objects/Customer_Information__c/fields/Is_Paid__c.field-meta.xml
<CustomField>
    <fullName>Is_Paid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Paid?</label>
    <type>Checkbox</type>
</CustomField>