force-app/main/default/objects/Customer_Information__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <label>Name</label>
    <length>125</length>
    <type>Text</type>
</CustomField>