force-app/main/default/objects/Customer_Information__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <label>Order</label>
    <type>Date</type>
</CustomField>